--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "watch": "nodemon server.js"
   },
+  "proxy": "http://localhost:3001",
   "keywords": [],
   "author": "",
   "license": "ISC",
